# G10-Rates-Trading-Dashboard

./: Cash-Bond-Dash.py  README.md  pyproject.toml
assets/: theme.css
modules/: analytics.py  calculations.py  data_loader.py  hedging.py  plots.py  swap_loader.py
